fix header left alignment

--- a/resources/assets/sass/components/_header.scss
+++ b/resources/assets/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .full-screen-header {
   display:flex;
-  @include flex-align($y: "middle");
+  @include flex-align($x:"left ",$y: "middle");
   background: url('../img/backgrounds/bg.jpeg') no-repeat center center;
   background-color:white; //fallback
   height: 60vh;
